unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/n2de__cls_Auto_conversion_rule__c.object-meta.xml
<CustomObject>
    <description>A Classifier Auto-conversion rule is used to match against incoming Leads and determine whether they should be auto-converted, de-duplicated or ignored</description>
    <label>Classifier Auto conversion rule</label>
    <nameField>
        <label>Classifier Auto Conversion Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier Auto conversion rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>