unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Action__c.field-meta.xml
<CustomField>
    <fullName>n2de__Action__c</fullName>
    <description>The name of an action to perform if this rule matches a given Lead</description>
    <label>Action</label>
    <length>15</length>
    <type>Text</type>
</CustomField>