unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Assignee_strategy__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assignee_strategy__c</fullName>
    <description>The strategy used when assigning a new Account, Contact and or Opportunity post conversion</description>
    <label>Assignee strategy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>