unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Create_opportunity__c.field-meta.xml
<CustomField>
    <fullName>n2de__Create_opportunity__c</fullName>
    <description>Strategy for the creation of an Opportunity: Always, Never or IfNoOpenOpportunity</description>
    <label>Create opportunity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>