unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Default_owner__c.field-meta.xml
<CustomField>
    <fullName>n2de__Default_owner__c</fullName>
    <description>Id of the default owner of new objects created by auto-conversion</description>
    <label>Default owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>