unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Field_updates__c.field-meta.xml
<CustomField>
    <fullName>n2de__Field_updates__c</fullName>
    <description>JSON object describing the field updates to make on new Account, Contact and Opportunity objects post
        auto-conversion</description>
    <label>Field updates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>