unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Filters__c.field-meta.xml
<CustomField>
    <fullName>n2de__Filters__c</fullName>
    <description>JSON object representing Logic and Filters to be applied to the incoming Lead</description>
    <label>Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>