unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Is_active__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When active, the auto-conversion rule is evaluated</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>