unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Is_default_rule__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_default_rule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this the default auto-conversion rule? The default rule is used when no other auto-conversion
        rules match.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>