unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Lead_convert_status__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lead_convert_status__c</fullName>
    <description>The status to set on a converted Lead</description>
    <label>Lead convert status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>