unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Match_filters__c.field-meta.xml
<CustomField>
    <fullName>n2de__Match_filters__c</fullName>
    <description>JSON object representing Logic and Filters to be applied to the incoming Distribution_engine_details__c</description>
    <label>Match filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>