unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Overwrite_leadsource__c.field-meta.xml
<CustomField>
    <fullName>n2de__Overwrite_leadsource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overwrite the lead source on a Contact using the Lead source from an incoming Lead</description>
    <label>Overwrite leadsource</label>
    <type>Checkbox</type>
</CustomField>