unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Send_email__c.field-meta.xml
<CustomField>
    <fullName>n2de__Send_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send an email on auto-conversion</description>
    <label>Send email</label>
    <type>Checkbox</type>
</CustomField>