unpackaged/main/default/objects/n2de__cls_Auto_conversion_rule__c/fields/n2de__Update_all_conversion_objects__c.field-meta.xml
<CustomField>
    <fullName>n2de__Update_all_conversion_objects__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Update all objects involved in a Lead conversion</inlineHelpText>
    <label>Update all conversion objects</label>
    <type>Checkbox</type>
</CustomField>